duvet/src/specification/markdown/snapshots/duvet__specification__markdown__tests__list_example__tree.snap
---
source: src/specification/markdown/tests.rs
expression: "super::parse(r#\"\n# List example\n\nHere is a list:\n* Item 1\n* Item 2\n  * Item 2.1\n* Item 3\n  * Item 3.1\n    * Item 3.1.1\n    * Item 3.1.2\n  * Item 3.2\n\nHere is a numbered list:\n1. Item 1\n2. Item 2\n3. Item 3\n\nHere is a list with content:\n* Item\n  More content\n\n  Other content\n\n  * Testing\n\n    Other test\n\nTesting 123\n\n* Item\nMore content\n\"#)"
---
Ok(
    Specification {
        title: Some(
            "List example",
        ),
        sections: [
            Section {
                id: "list-example",
                title: "List example",
                full_title: Str {
                    value: "# List example",
                    pos: 1,
                    line: 2,
                },
                lines: [
                    Str(
                        Str {
                            value: "Here is a list:",
                            pos: 17,
                            line: 4,
                        },
                    ),
                    Break,
                    Str(
                        Str {
                            value: "* Item 1",
                            pos: 33,
                            line: 5,
                        },
                    ),
                    Break,
                    Str(
                        Str {
                            value: "* Item 2",
                            pos: 42,
                            line: 6,
                        },
                    ),
                    Break,
                    Str(
                        Str {
                            value: "  * Item 2.1",
                            pos: 51,
                            line: 7,
                        },
                    ),
                    Break,
                    Str(
                        Str {
                            value: "* Item 3",
                            pos: 64,
                            line: 8,
                        },
                    ),
                    Break,
                    Str(
                        Str {
                            value: "  * Item 3.1",
                            pos: 73,
                            line: 9,
                        },
                    ),
                    Break,
                    Str(
                        Str {
                            value: "    * Item 3.1.1",
                            pos: 86,
                            line: 10,
                        },
                    ),
                    Break,
                    Str(
                        Str {
                            value: "    * Item 3.1.2",
                            pos: 103,
                            line: 11,
                        },
                    ),
                    Break,
                    Str(
                        Str {
                            value: "  * Item 3.2",
                            pos: 120,
                            line: 12,
                        },
                    ),
                    Break,
                    Str(
                        Str {
                            value: "",
                            pos: 133,
                            line: 13,
                        },
                    ),
                    Str(
                        Str {
                            value: "Here is a numbered list:",
                            pos: 134,
                            line: 14,
                        },
                    ),
                    Break,
                    Str(
                        Str {
                            value: "1. Item 1",
                            pos: 159,
                            line: 15,
                        },
                    ),
                    Break,
                    Str(
                        Str {
                            value: "2. Item 2",
                            pos: 169,
                            line: 16,
                        },
                    ),
                    Break,
                    Str(
                        Str {
                            value: "3. Item 3",
                            pos: 179,
                            line: 17,
                        },
                    ),
                    Break,
                    Str(
                        Str {
                            value: "",
                            pos: 189,
                            line: 18,
                        },
                    ),
                    Str(
                        Str {
                            value: "Here is a list with content:",
                            pos: 190,
                            line: 19,
                        },
                    ),
                    Break,
                    Str(
                        Str {
                            value: "* Item",
                            pos: 219,
                            line: 20,
                        },
                    ),
                    Str(
                        Str {
                            value: "  More content",
                            pos: 226,
                            line: 21,
                        },
                    ),
                    Str(
                        Str {
                            value: "",
                            pos: 241,
                            line: 22,
                        },
                    ),
                    Str(
                        Str {
                            value: "  Other content",
                            pos: 242,
                            line: 23,
                        },
                    ),
                    Str(
                        Str {
                            value: "",
                            pos: 258,
                            line: 24,
                        },
                    ),
                    Str(
                        Str {
                            value: "  * Testing",
                            pos: 259,
                            line: 25,
                        },
                    ),
                    Str(
                        Str {
                            value: "",
                            pos: 271,
                            line: 26,
                        },
                    ),
                    Str(
                        Str {
                            value: "    Other test",
                            pos: 272,
                            line: 27,
                        },
                    ),
                    Break,
                    Str(
                        Str {
                            value: "",
                            pos: 287,
                            line: 28,
                        },
                    ),
                    Str(
                        Str {
                            value: "Testing 123",
                            pos: 288,
                            line: 29,
                        },
                    ),
                    Str(
                        Str {
                            value: "",
                            pos: 300,
                            line: 30,
                        },
                    ),
                    Str(
                        Str {
                            value: "* Item",
                            pos: 301,
                            line: 31,
                        },
                    ),
                    Str(
                        Str {
                            value: "More content",
                            pos: 308,
                            line: 32,
                        },
                    ),
                    Break,
                ],
            },
        ],
        format: Markdown,
    },
)
